# utils

./: README.md
matlab/: readSurferGRD.m
matlab/SeismicPlot/: README.md  calcStairsData.m  data_shot.sgy  data_shots.sgy  ex1_1.m  ex1_2.m  ex1_3.m  ex1_4.m  ex1_5.m  ex1_6.m  ex2_1.m  ex2_2.m  ex2_3.m  ex2_4.m  ex2_5.m  ex3_1.m  ex4_1.m  ex4_2.m  synthetic_data.m  test.m
matlab/SeismicPlot/SeisPlot/: AngleCompute.m  Q_value.mat  RSN.m  SciNot.m  boxplot.m  colorbarset.m  demo.m  fkplot.m  folds.m  hodogramplot.m  iac.m  imageplot.m  imageplot3D.m  license.txt  local_related2D.m  multi_plot.m  muting2D.m  nmo_constant.m  plotSignals.m  plot_circle.m  reiac.m  renmo_constant.m  single_wigbplot.m  spectrumplot.m  subImageplot.m  sub_imageplot.m  sub_plot.m  text3.m  tickset.m  wigb.m  wigbplot.m
matlab/SeismicPlot/SeisPlot/segy/: writesegy.m
matlab/SeismicPlot/SeisPlot/utilities/: labelledslider.m
matlab/SeismicPlot/data/: cCD.m  er0001.segy  er0002.segy  er0003.segy  plot11.m
python/: pyproject.toml
python/tools/: xyz2lat.py
rust/xyz2lat/: Cargo.toml
rust/xyz2lat/src/: cli.rs  error.rs  lib.rs  main.rs  texts.rs  transformer.rs
